work on doc for max flux speed for sw

--- a/doc/dissertation/content/appendices/appendices.tex
+++ b/doc/dissertation/content/appendices/appendices.tex
@@ -15,7 +15,7 @@
 \renewcommand{\appendixname}{APPENDIX}
 
 \input{content/appendices/appendix_shallow_water_entropy_flux}
-\input{content/appendices/appendix_shallow_water_bc}
+%\input{content/appendices/appendix_shallow_water_bc}
 \input{content/appendices/appendix_shallow_water_max_wave_speed}
 
 \end{appendices}
