--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -174,6 +174,7 @@
 \newcommand{\heightmomentumx}{\heightmomentumletter_x}
 \newcommand{\heightmomentumy}{\heightmomentumletter_y}
 \newcommand{\heightmomentumd}{\heightmomentumletter_d}
+\newcommand{\dischargex}{\heightmomentumletter}
 \newcommand{\bathymetry}{b}
 \newcommand{\waterlevel}{w}
 \newcommand{\gravity}{g}
@@ -183,6 +184,7 @@
 \newcommand{\shockspeed}{S}
 \newcommand{\wavespeed}{\lambda}
 \newcommand{\maxwavespeed}{\wavespeed_{\text{max}}}
+\newcommand{\wavestrength}{\mathcal{W}}
 
 %==============================================================================
 % colors
