--- a/doc/dissertation/content/high_order/EV_shallowwater.tex
+++ b/doc/dissertation/content/high_order/EV_shallowwater.tex
@@ -24,7 +24,7 @@ which is often more convenient since it is a function of the conservative
 variables only.
 \end{remark}
 %==============================================================================
-The entropy flux, derived in Appendix \ref{app:shallow_water_entropy_flux}, is the
+The entropy flux, derived in Appendix \ref{sec:shallow_water_entropy_flux}, is the
 following:
 \begin{equation}
   \mathbf{\consfluxletter}^\entropy(\vectorsolution,\bathymetry)
