--- a/doc/dissertation/content/results/transport/saturation/description.tex
+++ b/doc/dissertation/content/results/transport/saturation/description.tex
@@ -5,7 +5,7 @@ evidence of the interface between the two regions.
 Table \ref{tab:saturation} summarizes the test parameters.
 
 %-------------------------------------------------------------------------------
-\begin{table}[h]\caption{Saturation Value Test Problem Summary}
+\begin{table}[htb]\caption{Saturation Value Test Problem Summary}
 \label{tab:saturation}
 \centering
 \begin{tabular}{l l}\toprule
