--- a/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
@@ -6,7 +6,7 @@ Table \ref{tab:void_to_absorber_skew} summarizes the test parameters,
 where the definition of $s$ is given below.
 
 %-------------------------------------------------------------------------------
-\begin{table}[h]\caption{Skew Void-to-Absorber Test Problem Summary}
+\begin{table}[htb]\caption{Skew Void-to-Absorber Test Problem Summary}
 \label{tab:void_to_absorber_skew}
 \centering
 \begin{tabular}{l l}\toprule
