--- a/doc/dissertation/content/results/transport/three_region/description.tex
+++ b/doc/dissertation/content/results/transport/three_region/description.tex
@@ -4,7 +4,7 @@ terms and source terms.
 Table \ref{tab:three_region} summarizes the test parameters.
 
 %-------------------------------------------------------------------------------
-\begin{table}[h]\caption{Three-Region Test Problem Summary}
+\begin{table}[htb]\caption{Three-Region Test Problem Summary}
 \label{tab:three_region}
 \centering
 \begin{tabular}{l l}\toprule
