--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -3,7 +3,7 @@ starting in a void and reaching a strong absorber region.
 Table \ref{tab:void_to_absorber} summarizes the test parameters.
 
 %-------------------------------------------------------------------------------
-\begin{table}[h]\caption{Void-to-Absorber Test Problem Summary}
+\begin{table}[htb]\caption{Void-to-Absorber Test Problem Summary}
 \label{tab:void_to_absorber}
 \centering
 \begin{tabular}{l l}\toprule
