--- a/transport/README
+++ b/transport/README
@@ -18,8 +18,8 @@ Input file: ./input
 
 To plot the results:
 ---------------------------------------------------------------------------------
-$ ./plot
+$ ./plot sol
 
 To plot convergence:
 ---------------------------------------------------------------------------------
-$ ./plot_convergence
+$ ./plot conv
