--- a/doc/dissertation/content/high_order/EV_shallowwater.tex
+++ b/doc/dissertation/content/high_order/EV_shallowwater.tex
@@ -49,27 +49,29 @@ The entropy jump for a face $F$ is defined to be
   \right\|_{L^\infty(F)} \eqp
 \end{equation}
 Finally, the entropy viscosity is computed as in the scalar case but with
-more generality in the normalization constant $c^{\text{normalization},\timeindex}_\cell$:
+more generality in the normalization constant $c^{\text{normalization},\timeindex}_q$:
 \begin{equation}
-   \entropycellviscosity[n] = \frac{\entropyresidualcoef
-   \entropyresidual_\cellindex^\timeindex
-   + \entropyjumpcoef\entropyjump_\cell^\timeindex}
-   {c^{\text{normalization},\timeindex}_\cell}
-   \eqp
+   \entropycellviscosity[n]
+     = \max\limits_{\x_q\in \mathcal{Q}_\cell}\pr{\frac{\entropyresidualcoef
+     |\entropyresidual_q^\timeindex|
+     + \entropyjumpcoef\entropyjump_\cell^\timeindex}
+     {c^{\text{normalization},\timeindex}_q}}
+   \eqc
 \end{equation}
-As in the scalar case, one may use a global normalization constant, in this case
-the maximum deviation of entropy from the average:
+where $\mathcal{Q}_\cell$ is the set of quadrature points in cell $\cell$.
+As in the scalar case, one may normalize using the deviation from the average
+entropy:
 \begin{equation}
-  c^{\text{normalization},\timeindex}_\cell = \|\entropy(\approximatevectorsolution^\timeindex)
-   -\bar{\entropy}(\approximatevectorsolution^\timeindex)\|_{L^\infty(\domain)}
+  c^{\text{normalization},\timeindex}_q
+    = \entropy(\approximatevectorsolution^\timeindex(\x_q))
+   -\bar{\entropy}(\approximatevectorsolution^\timeindex)
   \eqp
 \end{equation}
 Alternately, for the shallow water equations, the following local normalization
-constant is used:
+constant may be used:
 \begin{equation}
-  c^{\text{normalization},\timeindex}_\cell
-  = \min\limits_{\x_q\in\mathcal{Q}_\cell} \gravity (\approximate{h}^\timeindex(\x_q))^2
-  \eqc
+  c^{\text{normalization},\timeindex}_q
+  = \gravity (\approximate{h}^\timeindex(\x_q))^2
+  \eqp
 \end{equation}
-where $\mathcal{Q}_\cell$ is the set of quadrature points in cell $\cell$.
 
