--- a/doc/dissertation/content/high_order/EV_shallowwater.tex
+++ b/doc/dissertation/content/high_order/EV_shallowwater.tex
@@ -49,20 +49,20 @@ The entropy jump for a face $F$ is defined to be
   \right\|_{L^\infty(F)} \eqp
 \end{equation}
 Finally, the entropy viscosity is computed as in the scalar case but with
-more generality in the normalization constant $c^{\text{normalization},\timeindex}_q$:
+more generality in the normalization constant $\entropynormalization^\timeindex_q$:
 \begin{equation}
    \entropycellviscosity[n]
      = \max\limits_{\x_q\in \mathcal{Q}_\cell}\pr{\frac{\entropyresidualcoef
      |\entropyresidual_q^\timeindex|
      + \entropyjumpcoef\entropyjump_\cell^\timeindex}
-     {c^{\text{normalization},\timeindex}_q}}
+     {\entropynormalization^\timeindex_q}}
    \eqc
 \end{equation}
 where $\mathcal{Q}_\cell$ is the set of quadrature points in cell $\cell$.
 As in the scalar case, one may normalize using the deviation from the average
 entropy:
 \begin{equation}
-  c^{\text{normalization},\timeindex}_q
+  \entropynormalization^\timeindex_q
     = \entropy(\approximatevectorsolution^\timeindex(\x_q))
    -\bar{\entropy}(\approximatevectorsolution^\timeindex)
   \eqp
@@ -70,7 +70,7 @@ entropy:
 Alternately, for the shallow water equations, the following local normalization
 constant may be used:
 \begin{equation}
-  c^{\text{normalization},\timeindex}_q
+  \entropynormalization^\timeindex_q
   = \gravity (\approximate{h}^\timeindex(\x_q))^2
   \eqp
 \end{equation}
