started adding diffusion classes

--- a/doc/notes/notes.tex
+++ b/doc/notes/notes.tex
@@ -9,8 +9,8 @@
 %\author{Jean-Luc Guermond\\Jean Ragusa\\Joshua Hansel}
 \title{Shallow Water Notes}
 
-\input{../../dissertation/content/newestcommands}
-\input{../../dissertation/content/theorems_dissertation}
+\input{../dissertation/content/newestcommands}
+\input{../dissertation/content/theorems_dissertation}
 
 \begin{document}
 
@@ -22,7 +22,8 @@
 %\section{Weak Form}
 %\input{../../dissertation/content/discretization/shallowwater}
 %\section{Boundary Conditions}
-\input{../../dissertation/content/discretization/shallowwater_bc}
+%\input{../../dissertation/content/discretization/shallowwater_bc}
+\input{../dissertation/content/appendices/appendix_shallow_water_max_wave_speed}
 %===============================================================================
 %\section{Preliminaries}
 %===============================================================================
